--- a/springcloud-eureka/src/main/resources/application.properties
+++ b/springcloud-eureka/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=1111
 
-eureka.instance.hostname=localhost
+eureka.instance.hostname=peer1
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka
