--- a/springcloud-eureka-discovery-client/src/main/resources/application.properties
+++ b/springcloud-eureka-discovery-client/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=hello-service
-eureka.client.service-url.defaultZone=http://peer1:1111/eureka/,http://peer2:1112/eureka/
+eureka.client.service-url.defaultZone=http://peer1:1111/eureka/
+
+server.port=8080
